crates/cockpitctl-types/tests/snapshots/snapshot_tests__finding_minimal.snap
---
source: crates/cockpitctl-types/tests/snapshot_tests.rs
expression: f
---
{
  "severity": "info",
  "code": "note",
  "message": "Just a note"
}
