crates/cockpitctl-types/tests/snapshots/snapshot_tests__git_info_snapshot.snap
---
source: crates/cockpitctl-types/tests/snapshot_tests.rs
expression: g
---
{
  "repo": "org/repo",
  "base_ref": "main",
  "head_ref": "feature/x",
  "base_sha": "aaa",
  "head_sha": "bbb",
  "merge_base": "ccc"
}
