crates/cockpitctl-types/tests/snapshots/snapshot_tests__host_info_snapshot.snap
---
source: crates/cockpitctl-types/tests/snapshot_tests.rs
expression: h
---
{
  "os": "linux",
  "arch": "aarch64",
  "hostname": "runner-1"
}
