crates/cockpitctl-types/tests/snapshots/snapshot_tests__missing_fail.snap
---
source: crates/cockpitctl-types/tests/snapshot_tests.rs
expression: "MissingPolicy::Fail"
---
"fail"
