crates/cockpitctl-types/tests/snapshots/snapshot_tests__missing_skip.snap
---
source: crates/cockpitctl-types/tests/snapshot_tests.rs
expression: "MissingPolicy::Skip"
---
"skip"
