crates/cockpitctl-types/tests/snapshots/snapshot_tests__policy_allowed.snap
---
source: crates/cockpitctl-types/tests/snapshot_tests.rs
expression: "PolicyOutcome::Allowed"
---
"allowed"
