crates/cockpitctl-types/tests/snapshots/snapshot_tests__policy_blocked.snap
---
source: crates/cockpitctl-types/tests/snapshot_tests.rs
expression: "PolicyOutcome::Blocked"
---
"blocked"
